@@ -4,8 +4,6 @@ import java.util.Objects;
 import java.util.regex.Pattern;
 import java.util.regex.PatternSyntaxException;
 
-import org.apache.commons.lang.StringUtils;
-
 import com.google.common.annotations.Beta;
 
 import com.enonic.xp.app.ApplicationKey;
@@ -20,6 +18,7 @@ import com.enonic.xp.data.ValueType;
 import com.enonic.xp.data.ValueTypes;
 import com.enonic.xp.schema.xdata.XDataName;
 
+import static com.google.common.base.Strings.nullToEmpty;
 import static org.apache.commons.lang.StringUtils.substringAfter;
 import static org.apache.commons.lang.StringUtils.substringBefore;
 
@@ -173,51 +172,51 @@ public final class ContentMappingConstraint
 
     private Value convert( final String value, final ValueType type )
     {
-        if ( type == ValueTypes.XML )
+        if ( type.equals( ValueTypes.XML ) )
         {
             return ValueFactory.newXml( ValueTypes.XML.convert( value ) );
         }
-        if ( type == ValueTypes.LOCAL_DATE )
+        if ( type.equals( ValueTypes.LOCAL_DATE ) )
         {
             return ValueFactory.newLocalDate( ValueTypes.LOCAL_DATE.convert( value ) );
         }
-        if ( type == ValueTypes.LOCAL_TIME )
+        if ( type.equals( ValueTypes.LOCAL_TIME ) )
         {
             return ValueFactory.newLocalTime( ValueTypes.LOCAL_TIME.convert( value ) );
         }
-        if ( type == ValueTypes.LOCAL_DATE_TIME )
+        if ( type.equals( ValueTypes.LOCAL_DATE_TIME ) )
         {
             return ValueFactory.newLocalDateTime( ValueTypes.LOCAL_DATE_TIME.convert( value ) );
         }
-        if ( type == ValueTypes.DATE_TIME )
+        if ( type.equals( ValueTypes.DATE_TIME ) )
         {
             return ValueFactory.newDateTime( ValueTypes.DATE_TIME.convert( value ) );
         }
-        if ( type == ValueTypes.LONG )
+        if ( type.equals( ValueTypes.LONG ) )
         {
             return ValueFactory.newLong( ValueTypes.LONG.convert( value ) );
         }
-        if ( type == ValueTypes.DOUBLE )
+        if ( type.equals( ValueTypes.DOUBLE ) )
         {
             return ValueFactory.newDouble( ValueTypes.DOUBLE.convert( value ) );
         }
-        if ( type == ValueTypes.GEO_POINT )
+        if ( type.equals( ValueTypes.GEO_POINT ) )
         {
             return ValueFactory.newGeoPoint( ValueTypes.GEO_POINT.convert( value ) );
         }
-        if ( type == ValueTypes.BOOLEAN )
+        if ( type.equals( ValueTypes.BOOLEAN ) )
         {
             return ValueFactory.newBoolean( ValueTypes.BOOLEAN.convert( value ) );
         }
-        if ( type == ValueTypes.REFERENCE )
+        if ( type.equals( ValueTypes.REFERENCE ) )
         {
             return ValueFactory.newReference( ValueTypes.REFERENCE.convert( value ) );
         }
-        if ( type == ValueTypes.LINK )
+        if ( type.equals( ValueTypes.LINK ) )
         {
             return ValueFactory.newLink( ValueTypes.LINK.convert( value ) );
         }
-        if ( type == ValueTypes.BINARY_REFERENCE )
+        if ( type.equals( ValueTypes.BINARY_REFERENCE ) )
         {
             return ValueFactory.newBinaryReference( ValueTypes.BINARY_REFERENCE.convert( value ) );
         }
@@ -245,7 +244,7 @@ public final class ContentMappingConstraint
         }
         final String id = substringBefore( expression, SEPARATOR ).trim();
         final String value = substringAfter( expression, SEPARATOR ).trim();
-        if ( StringUtils.isBlank( id ) )
+        if ( nullToEmpty( id ).isBlank() )
         {
             throw new IllegalArgumentException( "Invalid match expression: " + expression );
         }
